force-app/main/default/objects/Attendees__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Dirección vivienda del asistente</description>
    <inlineHelpText>Dirección vivienda del asistente</inlineHelpText>
    <label>Address</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Attendees</relationshipLabel>
    <relationshipName>Attendees</relationshipName>
    <type>Lookup</type>
</CustomField>