force-app/main/default/objects/Attendees__c/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <description>Compañía a la que pertenece</description>
    <inlineHelpText>Compañía a la que pertenece</inlineHelpText>
    <label>Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>