force-app/main/default/objects/Attendees__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Mail del asistente</description>
    <inlineHelpText>Mail del asistente</inlineHelpText>
    <label>Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>