force-app/main/default/objects/Attendees__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Telefono del asistente</description>
    <inlineHelpText>Telefono del asistente</inlineHelpText>
    <label>Phone</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>